--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
   </div>
   <div class="navBar">
-    <nav style="width: 580px;" class="navbar bg-light fixed-top">
+    <nav class="navbar bg-light fixed-top">
       <div class="container-fluid">
         <a style="color: orangered;" class="navbar-brand" href="#"><span>
             <h1>Paw Squad</h1>
